# brewfusion

./: .gitignore  README.md  pyproject.toml  style_embedding_map.html  style_full_graph.html  style_graph_American_Stout.html  style_graph_American_Wheat_or_Rye_Beer.html  style_graph_Pale_Ale.html  style_graph_Stout.html  style_graph_Sweet_Stout.html  style_graph_Weissbier.html  style_graph_Weizen-Weissbier.html
paper/: brewfusion_paper.tex
scripts/: app.py  download_weights.py  visualize_style_graph.py
scripts/data_collection/: build_style_registry.py  fetch_compounds.py  fetch_punk_api.py  generate_sequences.py  parse_full_recipes.py  peek_data.py  raw_to_sequence.py  train_tokenizer.py
scripts/inference/: generate.py
scripts/training/: train_dit.py  train_gnn.py
src/brewfusion/: __init__.py  config.py
src/brewfusion/chem/: fingerprints.py  similarity.py
src/brewfusion/graph/: builder.py  schema.py
src/brewfusion/models/: csp_layer.py  dit_brewfusion.py  gnn_encoder.py  hybrid_embedding.py  scheduler.py  transformer.py
tests/: conftest.py
tests/integration/: test_graph_builder.py  test_inference_pipeline.py  test_train_pipeline.py
tests/unit/: test_chemistry.py  test_compound_db.py  test_dit_model.py  test_gnn_encoder.py  test_hybrid_embedding.py  test_json_parser.py  test_tokenizer.py  test_visualize_style_graph.py
